03-mod-orquestacion/02-distributed/deploymentFrontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seba

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front-deployment-seba
  namespace: seba  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-front-seba
  template:
    metadata:
      labels:
        app: todo-front-seba
    spec:
      containers:
        - name: todo-front
          image: lemoncodersbc/lc-todo-front:v5-2024
          ports:
            - containerPort: 80 #le indicamos a k8s que espere trafico por este port

          resources:
            requests:
              memory: "40Mi"
              cpu: "10m"
            limits:
              memory: "50Mi"
              cpu: "15m"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3              

---
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service-seba
  namespace: seba
spec:
  type: ClusterIP
  selector:
    app: todo-front-seba
  ports:
    - protocol: TCP
      port: 80        # puerto del service dentro del cluster
      targetPort: 80  # puerto del container
