03-mod-orquestacion/02-distributed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-seba
  namespace: seba
spec:
  ingressClassName: nginx
  rules:
    - host: todo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front-service-seba
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-back-service-seba
                port:
                  number: 3000
